(site) Fixed homepage hero, updated minor layout issues.

--- a/site/app/styles/app.scss
+++ b/site/app/styles/app.scss
@@ -2,6 +2,10 @@
 @import 'node_modules/prismjs/themes/prism-tomorrow';
 
 $navigationHeight: 3rem;
+$wideCut: 1280px;
+$heroHeight: 700px;
+$heroGutter: 4rem;
+$screenShotRatio: 1.635;
 
 html {
   box-sizing: border-box;
@@ -57,51 +61,53 @@ html, body {
   }
 
   .hero {
-    height: 80vmin;
-    overflow: hidden;
-    @media screen and (max-width: 30em) {
-      height: auto;
-      background-image: none;
-    }
-
+    overflow-x: hidden;
     .hero-screenshots {
-      top: 0;
-      right: 0;
-      width: 100%;
-      height: 80vmin;
-      pointer-events: none;
+      .screenshot-wrapper {
+        min-height: calc(100vw / #{$screenShotRatio});
+      }
+      .screenshot {
+        left: 4rem;
+        @media screen and (max-width: 30em) {
+          left: 0;
+          width: 100%;
+          img {
+            width: 100%;
+            height: auto;
+          }
+        }
+      }
       img {
-        position: absolute;
-        opacity: 0;
-        right: 0;
-        transition: opacity .5s ease-in-out, transform .5s ease-in-out;
+        transition: opacity .8s ease-in-out, transform .5s ease-in-out;
         box-shadow: 0 0 1rem rgba(0,0,0,.4);
+        opacity: 0;
+        width: calc(100vw - #{$heroGutter * 2});
+        height: calc((100vw - #{$heroGutter * 2}) / #{$screenShotRatio});
         &.loaded {
           opacity: 1;
         }
       }
-      .search {
-        width: 50vmax;
-        height: calc(50vmax / 1.635);
-        transform: translate(50vmax, 5vh);
-        &.loaded {
-          transform: translate(100px, 8vh);
+    }
+    @media screen and (min-width: $wideCut) {
+      padding-top: 0;
+      padding-bottom: 0;
+      height: $heroHeight;
+      header {
+        padding-left: 6rem;
+      }
+      .hero-screenshots {
+        .screenshot-wrapper {
+          min-height: 0;
         }
       }
-      .playlist {
-        width: 50vmax;
-        height: calc(50vmax / 1.635);
-        transform: translate(50vmax, 15vh);
-        &.loaded {
-          transform: translate(0, 18vh);
-        }
+      .w-50-xl {
+        width: 50%;
       }
-      .compact {
-        width: 200px;
-        height: calc(200px / 0.535);
-        transform: translate(300px, 22vh);
-        &.loaded {
-          transform: translate(0, 22vh);
+      .hero-screenshots {
+        img {
+          max-width: 100vw;
+          width: calc((#{$heroHeight} - #{$heroGutter * 2}) * #{$screenShotRatio});
+          height: calc((#{$heroHeight} - #{$heroGutter * 2}));
         }
       }
     }
